# pre-news-trading-surveillance

./: .gitignore  MVP.md  README.md  app.py  pyproject.toml  vercel.json
.github/workflows/: ci.yml  refresh.yml
configs/: app.example.toml  issuer_feeds.example.toml  refresh_pipeline.example.toml
data/benchmarks/: review_candidates.csv  reviewed_benchmark.csv  reviewed_benchmark.template.csv
data/publish/current/: evaluation_summary.json  events.json  manifest.json  model_summary.json  summary.json
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  DEPLOYMENT.md  EVALUATION.md  METHODOLOGY.md  MODELING.md  RISK_AND_LIMITATIONS.md
reports/evaluation/: backtest_report_20260401T150503Z.json  backtest_report_20260401T150503Z.md  backtest_report_20260402T054248Z.json  backtest_report_20260402T054248Z.md
sql/: 001_init.sql  002_pipeline.sql  003_nlp.sql  004_minute_pipeline.sql  005_ingestion_observability.sql  006_issuer_releases.sql  007_evaluation.sql
src/pre_news_trading_surveillance/: __init__.py  artifacts.py  cli.py  db.py  domain.py  serve_policy.py  settings.py
src/pre_news_trading_surveillance/api/: app.py  rate_limit.py
src/pre_news_trading_surveillance/evaluation/: backtest.py  benchmark.py  public_summary.py
src/pre_news_trading_surveillance/events/: __init__.py  sec_events.py
tests/: test_api_dashboard.py  test_evaluation_pipeline.py  test_event_pipeline.py  test_ingestion_observability.py  test_issuer_releases.py  test_market_provider.py  test_minute_pipeline.py  test_ml_scoring.py  test_publish_snapshot.py  test_refresh_pipeline.py  test_sec_parsing.py
tests/fixtures/: sample_market_daily.csv
(+517 files in other folders)
