[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre-news-trading-surveillance"
version = "0.1.0"
description = "Research platform for unusual pre-disclosure market activity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.0.0",
  "duckdb>=1.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]
nlp = [
  "sentence-transformers>=3.0.0",
  "transformers>=4.44.0",
]
ml = [
  "scikit-learn>=1.6.0",
  "lightgbm>=4.6.0",
]
publish = [
  "boto3>=1.35.0",
]

[project.scripts]
pnts = "pre_news_trading_surveillance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pre_news_trading_surveillance.ui" = ["static/*.html", "static/*.css", "static/*.js"]
